[package]
name = "gossip-relay-picker"
version = "0.2.0-unstable"
description = "A relay picker for nostr, used by gossip"
authors = ["Mike Dilger <mike@mikedilger.com>"]
license = "MIT"
repository = "https://github.com/mikedilger/gossip-relay-picker"
homepage = "https://github.com/mikedilger/gossip-relay-picker"
readme = "README.md"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
dashmap = "5.4"
nostr-types = { git = "https://github.com/mikedilger/nostr-types", rev = "1831e2f7a978e8ab7a30cd88affb44760da63a23", features = [ "speedy" ] }
thiserror = "1.0"
tracing = "0.1"
tokio = { version = "1", features = ["full"] }
