[package]
name = "gossip-relay-picker"
version = "0.2.0-unstable"
description = "A relay picker for nostr, used by gossip"
authors = ["Mike Dilger <mike@mikedilger.com>"]
license = "MIT"
repository = "https://github.com/mikedilger/gossip-relay-picker"
homepage = "https://github.com/mikedilger/gossip-relay-picker"
readme = "README.md"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
dashmap = "5.4"
nostr-types = { git = "https://github.com/mikedilger/nostr-types", rev = "1f77c3ef3d70b7e92c80e6643d52fed0e18fe9b2", features = [ "speedy" ] }
thiserror = "1.0"
tracing = "0.1"
tokio = { version = "1", features = ["full"] }
